hphp/hack/test/typecheck/case_type/case_type_wellformed_bad.php.exp
File "case_type_wellformed_bad.php", line 4, characters 11-14:
Invalid case type declaration. More than one variant of `Bad1` could contain values with the same runtime tag (Typing[4475])
  File "case_type_wellformed_bad.php", line 4, characters 29-47:
  This is the type `Traversable<string>`, which includes **vecs** because `Traversable` is a special interface that includes non-object values
  File "case_type_wellformed_bad.php", line 4, characters 18-25:
  It overlaps with `vec<int>`, which also includes **vecs**
File "case_type_wellformed_bad.php", line 14, characters 11-14:
Invalid case type declaration. More than one variant of `Bad2` could contain values with the same runtime tag (Typing[4475])
  File "case_type_wellformed_bad.php", line 14, characters 18-19:
  This is the type `I1`, which includes **objects**
  File "case_type_wellformed_bad.php", line 14, characters 23-29:
  It overlaps with `I2<int>`, which also includes **objects**
File "case_type_wellformed_bad.php", line 16, characters 11-15:
Invalid case type declaration. More than one variant of `Good2` could contain values with the same runtime tag (Typing[4475])
  File "case_type_wellformed_bad.php", line 16, characters 19-19:
  This is the type `C`, which includes **instances of the final class C**
  File "case_type_wellformed_bad.php", line 16, characters 23-29:
  It overlaps with `I2<int>`, which includes **objects**
  File "case_type_wellformed_bad.php", line 16, characters 11-15:
  Because **instances of the final class C** are also **objects**, `C` and `I2<int>` cannot be in the same case type
File "case_type_wellformed_bad.php", line 18, characters 11-15:
Invalid case type declaration. More than one variant of `Good3` could contain values with the same runtime tag (Typing[4475])
  File "case_type_wellformed_bad.php", line 18, characters 19-19:
  This is the type `C`, which includes **instances of the final class C**
  File "case_type_wellformed_bad.php", line 18, characters 23-24:
  It overlaps with `I1`, which includes **objects**
  File "case_type_wellformed_bad.php", line 18, characters 11-15:
  Because **instances of the final class C** are also **objects**, `C` and `I1` cannot be in the same case type
File "case_type_wellformed_bad.php", line 20, characters 11-14:
Invalid case type declaration. More than one variant of `Bad3` could contain values with the same runtime tag (Typing[4475])
  File "case_type_wellformed_bad.php", line 20, characters 18-25:
  This is the type `vec<int>`, which includes **vecs**
  File "case_type_wellformed_bad.php", line 20, characters 29-38:
  It overlaps with `(int, int)`, which also includes **vecs** because tuples are vecs at runtime
File "case_type_wellformed_bad.php", line 24, characters 11-14:
Invalid case type declaration. More than one variant of `Bad4` could contain values with the same runtime tag (Typing[4475])
  File "case_type_wellformed_bad.php", line 24, characters 18-34:
  This is the type `dict<string, int>`, which includes **dicts**
  File "case_type_wellformed_bad.php", line 24, characters 38-54:
  It overlaps with `shape('x' => int)`, which also includes **dicts** because shapes are dicts at runtime
